--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ version = "0.0.1"
 authors = [
   { name="Massoud Ahmed", email="okko@okxo.de" },
 ]
-description = "A small example package"
+description = "Python3 library for creating a Nextcloud Talk bot."
 readme = "README.md"
 requires-python = ">=3.7"
 classifiers = [
@@ -17,6 +17,9 @@ classifiers = [
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
 ]
+
+homepage = "https://okxo.de"
+keywords = ["nextcloud", "nextcloud talk", "bot"]
 
 [project.urls]
 "Homepage" = "https://github.com/sowoi/nextcloud-cloud-talk-bot"
