--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,6 +2,7 @@ site_name: Nextcloud Talk Bot
 site_url: https://nextcloud-talk-bot.readthedocs.io
 nav:
     - Home: index.md
+    - First Run Setup : FirstRunSetup.md
     - NextcloudFileOperations: NextcloudFileOperations.md
     - NextcloudTalkExtractor: NextcloudTalkExtractor.md
 theme: readthedocs
