--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,4 +5,5 @@ nav:
     - First Run Setup : FirstRunSetup.md
     - NextcloudFileOperations: NextcloudFileOperations.md
     - NextcloudTalkExtractor: NextcloudTalkExtractor.md
+    - NextcloudUser: NextcloudUser.md
 theme: readthedocs
