--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,13 +2,13 @@
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
-
 [project]
 name = "nextcloudtalkbot"
-version = "0.0.3"
+version = "0.0.8"
 authors = [
   { name="Massoud Ahmed", email="okko@okxo.de", homepage="https://okxo.de"},
 ]
+homepage = "https://okxo.de"
 description = "Python3 library for creating a Nextcloud Talk bot."
 readme = "README.md"
 requires-python = ">=3.7"
@@ -18,8 +18,14 @@ classifiers = [
     "Operating System :: OS Independent",
 ]
 
+dependencies = [
+    "cryptography",
+    "requests",
+]
+
 keywords = ["nextcloud", "nextcloud talk", "bot"]
 
 [project.urls]
-"Homepage" = "https://github.com/sowoi/nextcloud-cloud-talk-bot"
-"Bug Tracker" = "https://github.com/sowoi/nextcloud-cloud-talk-bot/issues"
+"Homepage" = "https://github.com/sowoi/nextcloud-talk-bot"
+"Bug Tracker" = "https://github.com/sowoi/nextcloud-talk-bot/issues"
+"Documentation" = "https://nextcloud-talk-bot.readthedocs.io"
