--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,13 +2,26 @@
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
+[tool.hatch.build]
+include = [
+  "/nextcloud_talk_bot/*.py",
+  "/tests/*.py",
+]
+exclude = [
+  "/docs",
+  "/dist",
+  "/site",
+  ".gitignore"
+
+]
+
 [project]
 name = "nextcloudtalkbot"
-version = "0.0.9"
+version = "0.0.18"
+homepage = "https://okxo.de"
 authors = [
   { name="Massoud Ahmed", email="okko@okxo.de", homepage="https://okxo.de"},
 ]
-homepage = "https://okxo.de"
 description = "Python3 library for creating a Nextcloud Talk bot."
 readme = "README.md"
 requires-python = ">=3.7"
