--- a/.github/workflows/python-lint.yml
+++ b/.github/workflows/python-lint.yml
@@ -14,6 +14,9 @@ jobs:
     steps:
     - name: Check out repository
       uses: actions/checkout@v2
+      with:
+        node-version: '16'
+
 
     - name: Set up Python
       uses: actions/setup-python@v2
