--- a/.github/workflows/python-unittest.yml
+++ b/.github/workflows/python-unittest.yml
@@ -23,11 +23,9 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        # Install test dependencies if necessary
-        # pip install -r requirements-test.txt
-
+        pip install -r tests/test-requirements.txt
+ 
     - name: Run unit tests
       run: |
         # Replace `your_test_module.py` with the name of your test module
-        python -m unittest your_test_module.py
+        python -m unittest discover -s tests -p 'test_*.py
