--- a/.github/workflows/python-unittest.yml
+++ b/.github/workflows/python-unittest.yml
@@ -27,4 +27,4 @@ jobs:
  
     - name: Run unit tests
       run: |
-        python -m unittest discover -s tests -p 'test_*.py
+        python -m unittest discover -s tests -p 'test_*.py'
