--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,13 +11,16 @@ exclude = [
   "/docs",
   "/dist",
   "/site",
-  ".gitignore"
+  ".gitignore",
+  ".tox",
+  ".venv",
+  ".github"
 
 ]
 
 [project]
 name = "nextcloudtalkbot"
-version = "0.0.29"
+version = "0.0.30"
 home-page = "https://okxo.de"
 authors = [
   { name="Massoud Ahmed", email="okko@okxo.de", home-page="https://okxo.de"},
