--- a/.github/workflows/python-tox.yml
+++ b/.github/workflows/python-tox.yml
@@ -15,7 +15,7 @@ jobs:
 
     strategy:
       matrix:
-        python-version: [3.6.15, 3.7.16, 3.8.16, 3.9.16, 3.10.11]
+        python-version: [3.8.16, 3.9.16, 3.10.11]
 
     steps:
     - uses: actions/checkout@v3
