--- a/.github/workflows/python-tox.yml
+++ b/.github/workflows/python-tox.yml
@@ -15,6 +15,7 @@ jobs:
 
     strategy:
       matrix:
+        os: [ubuntu-latest, windows-latest, macos-latest]
         python-version: [3.8.16, 3.9.16, 3.10.11]
 
     steps:
