--- a/.github/workflows/extract_strings.yml
+++ b/.github/workflows/extract_strings.yml
@@ -25,7 +25,7 @@ jobs:
       run: sudo apt-get install gettext
      
     - name: Create translations directory
-      run: mkdir -p translations
+      run: mkdir -p locale
       
     - name: Extract strings
       run: |
