--- a/.github/workflows/extract_strings.yml
+++ b/.github/workflows/extract_strings.yml
@@ -31,11 +31,14 @@ jobs:
       run: |
         xgettext -o locale/strings.pot --language=Python --add-comments --sort-output --from-code=UTF-8 $(find . -name "*.py")
         
-    - name: Commit and push updated POT file
-      run: |
-        git config --local user.email "action@github.com"
-        git config --local user.name "GitHub Action"
-        git add locale/strings.pot
-        git commit -m "Update POT file" || echo "No changes to commit"
-        git push
+- name: Commit and push updated POT file
+  run: |
+    git config --local user.email "action@github.com"
+    git config --local user.name "GitHub Action"
+    git add locale/strings.pot
+    git commit -m "Update POT file" || echo "No changes to commit"
+    git push origin "HEAD:${{ github.ref }}" || echo "No changes to push"
+  env:
+    GITHUB_TOKEN: ${{ secrets.GH_ACCESS_TOKEN }}
+
 
