--- a/.github/workflows/extract_strings.yml
+++ b/.github/workflows/extract_strings.yml
@@ -20,15 +20,13 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: 3.x
-
-    - name: Install gettext
-      run: sudo apt-get install gettext
-     
+    
     - name: Create translations directory
       run: mkdir -p locale
       
     - name: Extract strings
       run: |
+        sudo apt-get install -y gettext
         xgettext -o locale/strings.pot --language=Python --add-comments --sort-output --from-code=UTF-8 $(find . -name "*.py")
         
     - name: Commit and push updated POT file
