--- a/.github/workflows/extract_strings.yml
+++ b/.github/workflows/extract_strings.yml
@@ -22,12 +22,13 @@ jobs:
         python-version: 3.x
     
     - name: Create translations directory
-      run: mkdir -p locale
+      run: mkdir -p locales
       
     - name: Extract strings
       run: |
         sudo apt-get install -y gettext
-        xgettext -o locale/strings.pot --language=Python --add-comments --sort-output --from-code=UTF-8 $(find . -name "*.py")
+        xgettext -o locales/strings.pot --language=Python --add-comments --sort-output --from-code=UTF-8 $(find . -name "*.py")
+        xgettext -L Python -o locales/base.pot nextcloud_talk_bot/translations.py
         
     - name: Commit and push updated POT file
       run: |
