--- a/.github/workflows/extract_strings.yml
+++ b/.github/workflows/extract_strings.yml
@@ -34,7 +34,8 @@ jobs:
       run: |
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
-        git add locale/strings.pot
+        git add locales/strings.pot
+        git add locales/base.pot
         git commit -m "Update POT file" || echo "No changes to commit"
         git push origin "HEAD:${{ github.ref }}" || echo "No changes to push"
       env:
