adeded rquests_cache

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,7 @@ classifiers = [
 dependencies = [
     "cryptography",
     "requests",
+    "requests_cache",
     "caldav",
     "icalendar",
     "vobject",
